k8s/routers/develop/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: issuer-node-api

spec:
  parentRefs:
    - name: main
      namespace: infra
  hostnames:
    - "issuer-node-core-api-testing.privado.id"
  rules:
    - backendRefs:
        - name: issuer-node-develop-api-svc
          port: 3001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: issuer-node-ui

spec:
  parentRefs:
    - name: main
      namespace: infra
  hostnames:
    - "issuer-node-ui-testing.privado.id"
  rules:
    - backendRefs:
        - name: issuer-node-develop-ui-svc
          port: 8080
